# archi-calc

./: CMakeLists.txt
app/: main.cpp
backend/: AppObservers.cpp  AppObservers.h  CMakeLists.txt  Command.cpp  Command.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandManager.cpp  CommandManager.h  CommandRepository.cpp  CommandRepository.h  CoreCommands.cpp  CoreCommands.h  Stack.cpp  Stack.h  StoredProcedure.cpp  StoredProcedure.h
ui/: CMakeLists.txt  Cli.cpp  Cli.h
utility/: CMakeLists.txt  Exception.h  Observer.cpp  Observer.h  Publisher.cpp  Publisher.h  Tokenizer.cpp  Tokenizer.h  UserInterface.cpp  UserInterface.h  Version.h
